Consistently use Ref instead of RefPtr for non-null GlyphBuffer::fontAt() results <https://bugs.webkit.org/show_bug.cgi?id=319846> <rdar://182743001>

Reviewed by Vitor Roriz.

`GlyphBuffer::fontAt()` returns the result of dereferencing a
`SingleThreadWeakPtr<const Font>`, whose `operator*` does a
`RELEASE_ASSERT()` that the font is live, so the returned reference is
never nullptr.  Hold it in `Ref<const Font>` rather than a nullable
`RefPtr` in `FontCascade::drawGlyphBuffer()` to express that invariant.

Also promote the bare `const Font&` local in the debug-only
`WebCore::operator<<(TextStream&, const GlyphBuffer&)` to a stack `Ref`,
so the font stays live across the non-trivial `boundsForGlyph()` call
instead of being borrowed from the weak reference.

No new tests since no change in behavior.

* Source/WebCore/platform/graphics/Font.cpp:
(WebCore::operator<<):
* Source/WebCore/platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::drawGlyphBuffer):

Canonical link: https://commits.webkit.org/317589@main